--- a/RestaurantSigloXXI/Vista/WPFCliente2.xaml
+++ b/RestaurantSigloXXI/Vista/WPFCliente2.xaml
@@ -54,6 +54,13 @@
                 <RadioButton x:Name="rbNo" Content="No" HorizontalAlignment="Left" Margin="220,347,0,0" VerticalAlignment="Top"/>
                 <Button x:Name="btnGenerarUser" ToolTip="Generar Id de Usuario"  Content="Generar" HorizontalAlignment="Left" Margin="310,276,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnGenerarUser_Click"/>
                 <Button x:Name="btnGenerarPass" ToolTip="Generar Contraseña"  Content="Generar" HorizontalAlignment="Left" Margin="310,309,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnGenerarPass_Click"/>
+                <Label x:Name="lbl1_Copy" Content="*"  HorizontalAlignment="Left" Margin="352,10,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy1" Content="*"  HorizontalAlignment="Left" Margin="352,43,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy3" Content="*"  HorizontalAlignment="Left" Margin="352,109,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101" RenderTransformOrigin="0.63,1.692"/>
+                <Label x:Name="lbl1_Copy4" Content="*"  HorizontalAlignment="Left" Margin="352,176,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy5" Content="*"  HorizontalAlignment="Left" Margin="294,212,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy6" Content="*"  HorizontalAlignment="Left" Margin="294,278,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy7" Content="*"  HorizontalAlignment="Left" Margin="294,311,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
 
             </Grid>
         </GroupBox>
