--- a/RestaurantSigloXXI/Vista/WPFProveedor.xaml
+++ b/RestaurantSigloXXI/Vista/WPFProveedor.xaml
@@ -33,6 +33,9 @@
                 <Label x:Name="label_Copy2" Content="Nombre:" HorizontalAlignment="Left" Margin="27,3,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <TextBox x:Name="txtDireccion" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Dirección" Height="8" Margin="166,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="0.5,0.5" SelectionBrush="#FFCB5F21" />
                 <TextBox x:Name="txtWeb" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Sitio Web" Height="8" Margin="166,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="0.5,0.5" SelectionBrush="#FFCB5F21" />
+                <Label x:Name="lbl1_Copy2" Content="*"  HorizontalAlignment="Left" Margin="340,3,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy" Content="*"  HorizontalAlignment="Left" Margin="398,34,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy1" Content="*"  HorizontalAlignment="Left" Margin="291,65,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
 
             </Grid>
         </GroupBox>
