--- a/RestaurantSigloXXI/Vista/WPFReceta.xaml
+++ b/RestaurantSigloXXI/Vista/WPFReceta.xaml
@@ -15,11 +15,10 @@
         <Image x:Name="image" Height="627" VerticalAlignment="Top" Source="Imagenes/about-img.jpg" Stretch="Fill" Opacity="0.3" Margin="0,0,-12,-13" HorizontalAlignment="Left" Width="1186"/>
         <GroupBox x:Name="groupBox" Header="Información de Receta" Margin="22,7,37,0" VerticalAlignment="Top" Height="211" Background="#FFCB5F21" mah:ControlsHelper.ContentCharacterCasing="Upper" BorderBrush="#FFCB5F21">
             <Grid HorizontalAlignment="Left" Height="180" VerticalAlignment="Top" Width="1105" Margin="0,-2,-0.333,-2" Background="{x:Null}">
-                <TextBox x:Name="txtNom_receta" HorizontalAlignment="Left"  Height="8" Margin="167,2,0,0" TextWrapping="Wrap" mah:TextBoxHelper.Watermark="Ingrese Nombre" VerticalAlignment="Top" Width="220" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21" />
-                <TextBox x:Name="txtTi_Coc" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Minutos" Height="8" Margin="167,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
-                <TextBox x:Name="txtTPrep" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Minutos" Height="8" Margin="167,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
-                <TextBox x:Name="txtTotal" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="" Height="8" Margin="167,88,0,0" TextWrapping="Wrap" IsEnabled="False" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="False" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
-                <TextBox x:Name="txtPorcion" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Cantidad" Height="8" Margin="167,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
+                <TextBox x:Name="txtNom_receta" HorizontalAlignment="Left"  Height="8" Margin="161,6,0,0" TextWrapping="Wrap" mah:TextBoxHelper.Watermark="Ingrese Nombre" VerticalAlignment="Top" Width="220" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" SelectionBrush="#FFCB5F21" />
+                <TextBox x:Name="txtTi_Coc" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Minutos" Height="8" Margin="161,43,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
+                <TextBox x:Name="txtTPrep" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Minutos" Height="8" Margin="161,79,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
+                <TextBox x:Name="txtPorcion" HorizontalAlignment="Left" mah:TextBoxHelper.Watermark="Ingrese Cantidad" Height="8" Margin="161,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="131" FontWeight="Normal" mah:TextBoxHelper.ClearTextButton="True" KeyDown="txtNumeros_KeyDown" SelectionBrush="#FFCB5F21" />
 
                 <Button x:Name="btnGuardar" ToolTip="Guardar Registro" Content="Guardar" HorizontalAlignment="Left" Margin="117,147,0,0" VerticalAlignment="Top" Width="75" Cursor="Arrow" FontWeight="Normal" mah:ButtonHelper.PreserveTextCase="True" mah:TextBoxHelper.ClearTextButton="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnGuardar_Click"/>
                 <Button x:Name="btnCancelar" ToolTip="Cancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="301,146,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal" Cursor="Arrow"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCancelar_Click"/>
@@ -28,22 +27,24 @@
                 <Button x:Name="btnModificar" ToolTip="Actualizar Registro" Content="Actualizar" HorizontalAlignment="Left" Margin="115,146,0,0" VerticalAlignment="Top" Cursor="Arrow" Width="80" FontWeight="Normal"   mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnModificar_Click" />
                 <Label x:Name="lblId" Content="" Visibility="Hidden" HorizontalAlignment="Left" Margin="405,2,0,0" VerticalAlignment="Top" FontSize="12"/>
 
-                <Label x:Name="label_Copy1" Content="T. de Cocción (Min.):" HorizontalAlignment="Left" Margin="6,30,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy1" Content="T. de Cocción (Min.):" HorizontalAlignment="Left" Margin="6,42,0,0" VerticalAlignment="Top" FontSize="12"/>
                 <Label x:Name="label_Copy3" Content="Asignada Para:" HorizontalAlignment="Left" Margin="-272,122,0,0" VerticalAlignment="Top" FontSize="12"/>
-                <Label x:Name="label_Copy2" Content="Nombre de Receta:" HorizontalAlignment="Left" Margin="6,2,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy2" Content="Nombre de Receta:" HorizontalAlignment="Left" Margin="6,6,0,0" VerticalAlignment="Top" FontSize="12"/>
 
-                <Label x:Name="label_Copy" Content="T. de Preparación (Min.):" HorizontalAlignment="Left" Margin="6,59,0,0" VerticalAlignment="Top" FontSize="12"/>
-
-                <Label x:Name="label_Copy4" Content="T. Total (Min.):" HorizontalAlignment="Left" Margin="6,88,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy" Content="T. de Preparación (Min.):" HorizontalAlignment="Left" Margin="6,79,0,0" VerticalAlignment="Top" FontSize="12"/>
 
                 <Label x:Name="label_Copy6" Content="Instrucciones:" HorizontalAlignment="Left" Margin="392,2,0,0" VerticalAlignment="Top" FontSize="12"/>
 
-                <Label x:Name="label_Copy7" Content="Porciones:" HorizontalAlignment="Left" Margin="6,117,0,0" VerticalAlignment="Top" FontSize="12"/>
+                <Label x:Name="label_Copy7" Content="Porciones:" HorizontalAlignment="Left" Margin="6,114,0,0" VerticalAlignment="Top" FontSize="12"/>
 
                 <Label x:Name="label_Copy8" Content="Ingredientes:" HorizontalAlignment="Left" Margin="750,2,-38,0" VerticalAlignment="Top" FontSize="12"/>
-                <TextBox x:Name="txtInstrucciones" ScrollViewer.VerticalScrollBarVisibility="Visible"  HorizontalAlignment="Left"  Height="141" Margin="392,33,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" FontWeight="Normal"  SelectionBrush="#FFCB5F21" />
-                <TextBox x:Name="txtIngrediente"  ScrollViewer.VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left"  Height="141" Margin="750,33,-296,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" FontWeight="Normal"  SelectionBrush="#FFCB5F21" />
-                <Button x:Name="btnCalcular" ToolTip="Calcular Total" Content="Calcular" HorizontalAlignment="Left" Margin="303,88,0,0" VerticalAlignment="Top" Width="75" FontWeight="Normal"  mah:ButtonHelper.PreserveTextCase="True" RenderTransformOrigin="1.662,0.727" Style="{StaticResource AccentedSquareButtonStyle}" Background="#FFCB5F21" FontSize="12" Click="btnCalcular_Click"/>
+                <TextBox x:Name="txtInstrucciones" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Visible"  HorizontalAlignment="Left"  Height="141" Margin="392,33,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" FontWeight="Normal"  SelectionBrush="#FFCB5F21" />
+                <TextBox x:Name="txtIngrediente"  AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Visible" HorizontalAlignment="Left"  Height="141" Margin="750,33,-296,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" FontWeight="Normal"  SelectionBrush="#FFCB5F21" />
+                <Label x:Name="lbl1_Copy2" Content="*"  HorizontalAlignment="Left" Margin="381,6,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy" Content="*"  HorizontalAlignment="Left" Margin="292,79,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy1" Content="*"  HorizontalAlignment="Left" Margin="292,114,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy3" Content="*"  HorizontalAlignment="Left" Margin="479,6,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
+                <Label x:Name="lbl1_Copy4" Content="*"  HorizontalAlignment="Left" Margin="839,2,0,0" VerticalAlignment="Top" FontSize="12" Foreground="#FF920101"/>
 
             </Grid>
         </GroupBox>
